--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: brush_script_mt_cursive;
+  src: url(../fonts/brush\ script\ mt\ kursiv.ttf);
+}
+
 .bg-navigation {
   background-color: #EE2F65!important;
 }
@@ -13,8 +18,9 @@
 }
 
 .regard{
-    font-family: "Brush Script MT", cursive; 
+    font-family: "brush_script_mt_cursive", cursive; 
     color: #ff5722;
+    font-size: 3rem;
 }
 
 .bg-regard{
@@ -27,6 +33,9 @@
   padding-bottom:50%;
   background: #957e42;
   border-radius:50%;
+  margin: auto;
+  max-width: 125px;
+  min-width: 125px;
 }
 .circle span{
   position:absolute;
@@ -34,4 +43,11 @@
   color: #d4dbda;
   transform: translate(-50%, -50%);
   margin:0;
+}
+
+.section-title{
+  color: #f17105;
+}
+.projects-title{
+  color: #ee2f65;
 }
