quick fix for styles

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@
     left:50%;
     transform:translate(-50%,-50%);
     font-size:90px;
-    color:#E1EEEE/*#CBE690;*/
+    color:#E1EEEE;/*#CBE690;*/
     width:100%;
     text-align:center;
     margin:0;
